Fixed body height in an attempt to fix display on mobile

--- a/master.css
+++ b/master.css
@@ -29,7 +29,7 @@ body {
 	margin: 0px;
 	padding: 0px;
 	width: 100%;
-	height: 100%;
+	height: 100vh;
 	display: flex;
 	flex-direction: column;
 }
